0-bak/ddns/k8s/service-ddns.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddns
  namespace: ddns
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9876
  selector:
    app: ddns
  sessionAffinity: None
  type: NodePort
